Updated the navbar file paths and fixed the text align from "justify" to "left" to avoid extra spaces in between

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -115,9 +115,9 @@ h3 > a {
 }
 /*profile styling*/
 section{
-    background: rgba(25,255,265,.2);
+    background: rgba(206,240,255,.6);
     border-radius: 10px;
-    text-align: justify;
+    text-align: left;
     padding: 15px 25px;
     margin: 50px 0;
 }
